temp: dress temp version

--- a/v2/index.html
+++ b/v2/index.html
@@ -139,6 +139,192 @@
     </div>
 </div>
 
+<div class="container position-relative py-5 my-5">
+    <div class="row justify-content-center py-5 mv-up-0x375 mv-up-lg-0">
+        <div class="col-12 col-lg-3">
+            <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
+
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-up-lg-0x5 bg-accessory-linear">
+                    <!-- 配件 HEAD -->
+                    <div class="swiper dress-head radius-1x5">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD3.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD9.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD10.png" class="img-fluid"/></div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev dress-head scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                    <div class="swiper-button-next dress-head scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
+                </div>
+
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0 bg-accessory-linear">
+                    <!-- 配件 BODY -->
+                    <div class="swiper dress-body radius-1x5">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/BODY/BODY2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BODY/BODY4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BODY/BODY8.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BODY/BODY9.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BODY/BODY10.png" class="img-fluid"/></div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev dress-body scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                    <div class="swiper-button-next dress-body scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
+                </div>
+
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0x5 bg-accessory-linear rounded-circle">
+                    <!-- 配件 BG -->
+                    <div class="swiper dress-bg rounded-circle">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/BG/BG1.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BG/BG2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BG/BG3.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BG/BG4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/BG/BG5.png" class="img-fluid"/></div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev dress-bg scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                    <div class="swiper-button-next dress-bg scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-12 col-sm-9 col-lg-6 order-first order-lg-0" style="z-index: -1">
+            <div class="d-flex justify-content-center">
+                <div class="col-10">
+
+                    <!-- 主體 -->
+                    <div class="main-body-box mx-5 px-5 scale-md-1x5 scale-lg-2x0 text-center">
+                        <!-- 主體 HEAD -->
+                        <div class="main-body" style="z-index: 4">
+                            <div class="swiper dress-head">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD2.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD3.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD4.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD9.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD10.png" class="img-fluid rounded-circle"/></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 主體 BODY -->
+                        <div class="main-body" style="z-index: 2">
+                            <div class="swiper dress-body">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY2.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY4.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY8.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY9.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY10.png" class="img-fluid rounded-circle"/></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 主體 BG -->
+                        <div class="main-body" style="z-index: 0">
+                            <div class="swiper dress-bg">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG1.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG2.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG3.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG4.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG5.png" class="img-fluid rounded-circle"/></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 主體 EYES -->
+                        <div class="main-body" style="z-index: 5">
+                            <div class="swiper dress-eyes">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES2.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES3.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES4.png" class="img-fluid rounded-circle"/></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 主體 MOUTH -->
+                        <div class="main-body" style="z-index: 6">
+                            <div class="swiper dress-mouth">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH2.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH4.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH8.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH9.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH10.png" class="img-fluid rounded-circle"/></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 主體 CLOTHES -->
+                        <div class="main-body" style="z-index: 6">
+                            <div class="swiper dress-clothes">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES1.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES2.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES3.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES4.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES5.png" class="img-fluid rounded-circle"/></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
+            <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
+
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-up-lg-0x5 bg-accessory-linear">
+                    <!-- 配件 EYES -->
+                    <div class="swiper dress-eyes radius-1x5">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES3.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES4.png" class="img-fluid"/></div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev dress-eyes scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                    <div class="swiper-button-next dress-eyes scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
+                </div>
+
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0 bg-accessory-linear">
+                    <!-- 配件 MOUTH -->
+                    <div class="swiper dress-mouth radius-1x5">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH8.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH9.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH10.png" class="img-fluid"/></div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev dress-mouth scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                    <div class="swiper-button-next dress-mouth scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
+                </div>
+
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0x5 bg-accessory-linear">
+                    <!-- 配件 CLOTHES -->
+                    <div class="swiper dress-clothes radius-1x5">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES1.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES3.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES5.png" class="img-fluid"/></div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev dress-clothes scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                    <div class="swiper-button-next dress-clothes scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="container-fluid bg-cap-lighter py-5">
     <div class="row">
