update media link

--- a/v2/index.html
+++ b/v2/index.html
@@ -71,10 +71,10 @@
                 </div>
                 <div class="col-3">
                     <div class="d-flex flex-row justify-content-end">
-                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.svg" height="26" alt="instagram"/></a>
-                        <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="26" alt="discord"/></a>
-                        <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.svg" height="26" alt="twitter"/></a>
-                        <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.svg" height="26" alt="facebook"/></a>
+                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/instagram.svg" height="26" alt="instagram"/></a>
+                        <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/discord.svg" height="26" alt="discord"/></a>
+                        <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/twitter.svg" height="26" alt="twitter"/></a>
+                        <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/facebook.svg" height="26" alt="facebook"/></a>
                     </div>
                 </div>
             </div>
@@ -375,6 +375,14 @@
     </div>
 </div>
 
+<div class="container-fluid bg-base py-5 my-lg-5 my-3">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1 class="banner-text-h1 effect-text-light fw-bold">WANA 記憶盃</h1>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div class="bg-light radius-2 mx-2 py-5">
         <div class="row px-3 pt-5 mt-5 g-0">
@@ -393,7 +401,7 @@
     </div>
 </div>
 
-<div class="container-fluid bg-base py-5">
+<div class="container-fluid bg-base py-5 my-3 my-lg-5">
     <div class="row">
         <div class="col-12 text-center">
             <h1 class="banner-text-h1 effect-text-light fw-bold">WANA星的發展</h1>
@@ -456,7 +464,7 @@
     </div>
 </div>
 
-<div class="container-fluid bg-base py-5">
+<div class="container-fluid bg-base py-5 my-3 my-lg-5">
     <div class="row">
         <div class="col-12 text-center">
             <h1 class="banner-text-h1 effect-text-light fw-bold">團隊故事</h1>
@@ -489,61 +497,61 @@
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">創始人</div>
             <img src="assets/image/TEAM/MEMBER1.png" class="img-fluid">
-            <div class="py-2"><a href="https://twitter.com/zeng_wenxuan" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://twitter.com/zeng_wenxuan" target="_blank"><img src="assets/icon/twitter.svg" height="32px"></a></div>
             <div class="banner-text-h4">Flora</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">創始人</div>
             <img src="assets/image/TEAM/MEMBER2.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="#" target="_blank" ><img height="32px"></a></div>
             <div class="banner-text-h4">Emily</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">SOL工程師</div>
             <img src="assets/image/TEAM/MEMBER3.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="#" target="_blank"><img height="32px"></a></div>
             <div class="banner-text-h4">Tony</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">工程師</div>
             <img src="assets/image/TEAM/MEMBER4.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://github.com/gjlmotea" target="_blank"><img src="assets/icon/github.svg" height="32px"></a></div>
             <div class="banner-text-h4">抹茶</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">工程師</div>
             <img src="assets/image/TEAM/MEMBER5.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/hanxuan.c" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
             <div class="banner-text-h4">Crazy</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">行銷</div>
             <img src="assets/image/TEAM/MEMBER6.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/anita_0312" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
             <div class="banner-text-h4">Anita</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">行銷</div>
             <img src="assets/image/TEAM/MEMBER7.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/determination_pain" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
             <div class="banner-text-h4">Frank</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">企劃</div>
             <img src="assets/image/TEAM/MEMBER8.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/yun_chennn/" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
             <div class="banner-text-h4">Dodo</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">遊戲工程師</div>
             <img src="assets/image/TEAM/MEMBER9.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://github.com/YUOuYangYoyoball" target="_blank"><img src="assets/icon/github.svg" height="32px"></a></div>
             <div class="banner-text-h4">歐陽</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">DC MOD</div>
             <img src="assets/image/TEAM/MEMBER10.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://github.com/linty1997" target="_blank"><img src="assets/icon/github.svg" height="32px"></a></div>
             <div class="banner-text-h4">小白</div>
         </div>
     </div>
@@ -722,10 +730,10 @@
             </div>
             <div class="col-12">
                 <div class="d-flex flex-row justify-content-center">
-                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.svg" height="40" alt="instagram"/></a>
-                    <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
-                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.svg" height="40" alt="twitter"/></a>
-                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.svg" height="40" alt="facebook"/></a>
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/instagram.svg" height="40" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/discord.svg" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/twitter.svg" height="40" alt="twitter"/></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/facebook.svg" height="40" alt="facebook"/></a>
                 </div>
             </div>
         </div>
