--- a/v2/index.html
+++ b/v2/index.html
@@ -134,7 +134,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center py-5 my-5">
-            <h1 class="banner-text-h1 effect-text-light fw-bold">\ 搭配出你的 WAVATAR! /</h1>
+            <h1 class="banner-text-h1 effect-text-light fw-bold">\ 搭配出你的 WAVATAR /</h1>
         </div>
     </div>
 </div>
@@ -497,61 +497,61 @@
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">創始人</div>
             <img src="assets/image/TEAM/MEMBER1.png" class="img-fluid">
-            <div class="py-2"><a href="https://twitter.com/zeng_wenxuan" target="_blank"><img src="assets/icon/twitter.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://twitter.com/zeng_wenxuan" target="_blank"><img src="assets/icon/twitter.svg" height="32"></a></div>
             <div class="banner-text-h4">Flora</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">創始人</div>
             <img src="assets/image/TEAM/MEMBER2.png" class="img-fluid">
-            <div class="py-2"><a href="#" target="_blank" ><img height="32px"></a></div>
+            <div class="py-2"><a href="#" target="_blank" ><img height="32"></a></div>
             <div class="banner-text-h4">Emily</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">SOL工程師</div>
             <img src="assets/image/TEAM/MEMBER3.png" class="img-fluid">
-            <div class="py-2"><a href="#" target="_blank"><img height="32px"></a></div>
+            <div class="py-2"><a href="#" target="_blank"><img height="32"></a></div>
             <div class="banner-text-h4">Tony</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">工程師</div>
             <img src="assets/image/TEAM/MEMBER4.png" class="img-fluid">
-            <div class="py-2"><a href="https://github.com/gjlmotea" target="_blank"><img src="assets/icon/github.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://github.com/gjlmotea" target="_blank"><img src="assets/icon/github.svg" height="32"></a></div>
             <div class="banner-text-h4">抹茶</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">工程師</div>
             <img src="assets/image/TEAM/MEMBER5.png" class="img-fluid">
-            <div class="py-2"><a href="https://www.instagram.com/hanxuan.c" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/hanxuan.c" target="_blank"><img src="assets/icon/instagram.svg" height="32"></a></div>
             <div class="banner-text-h4">Crazy</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">行銷</div>
             <img src="assets/image/TEAM/MEMBER6.png" class="img-fluid">
-            <div class="py-2"><a href="https://www.instagram.com/anita_0312" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/anita_0312" target="_blank"><img src="assets/icon/instagram.svg" height="32"></a></div>
             <div class="banner-text-h4">Anita</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">行銷</div>
             <img src="assets/image/TEAM/MEMBER7.png" class="img-fluid">
-            <div class="py-2"><a href="https://www.instagram.com/determination_pain" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/determination_pain" target="_blank"><img src="assets/icon/instagram.svg" height="32"></a></div>
             <div class="banner-text-h4">Frank</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">企劃</div>
             <img src="assets/image/TEAM/MEMBER8.png" class="img-fluid">
-            <div class="py-2"><a href="https://www.instagram.com/yun_chennn/" target="_blank"><img src="assets/icon/instagram.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://www.instagram.com/yun_chennn/" target="_blank"><img src="assets/icon/instagram.svg" height="32"></a></div>
             <div class="banner-text-h4">Dodo</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">遊戲工程師</div>
             <img src="assets/image/TEAM/MEMBER9.png" class="img-fluid">
-            <div class="py-2"><a href="https://github.com/YUOuYangYoyoball" target="_blank"><img src="assets/icon/github.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://github.com/YUOuYangYoyoball" target="_blank"><img src="assets/icon/github.svg" height="32"></a></div>
             <div class="banner-text-h4">歐陽</div>
         </div>
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">DC MOD</div>
             <img src="assets/image/TEAM/MEMBER10.png" class="img-fluid">
-            <div class="py-2"><a href="https://github.com/linty1997" target="_blank"><img src="assets/icon/github.svg" height="32px"></a></div>
+            <div class="py-2"><a href="https://github.com/linty1997" target="_blank"><img src="assets/icon/github.svg" height="32"></a></div>
             <div class="banner-text-h4">小白</div>
         </div>
     </div>
