--- a/v2/index.html
+++ b/v2/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="https://wanawallet.co/v2/assets/logo/WANA_LOGO.png">
     <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="../lib/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="../lib/bootstrap/bootstrap-extension.css">
     <link rel="stylesheet" href="../lib/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="../lib/aos/aos.css">
     <link rel="stylesheet" href="../common.css">
@@ -133,18 +134,18 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 text-center py-5 my-5">
+        <div class="col-12 text-center pt-5 mt-5">
             <h1 class="banner-text-h1 effect-text-light fw-bold">\ 搭配出你的 WAVATAR /</h1>
         </div>
     </div>
 </div>
 
-<div class="container position-relative py-5 my-5">
+<div class="container position-relative pt-6 pb-7 py-sm-5 my-5">
     <div class="row justify-content-center py-5 mv-up-0x375 mv-up-lg-0">
         <div class="col-12 col-lg-3">
             <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-up-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-up-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
                     <!-- 配件 HEAD -->
                     <div class="swiper dress-head radius-40pct">
                         <div class="swiper-wrapper">
@@ -159,7 +160,7 @@
                     <div class="swiper-button-next dress-head scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0 bg-accessory-linear radius-40pct border border-3 border-dark">
                     <!-- 配件 BODY -->
                     <div class="swiper dress-body radius-40pct">
                         <div class="swiper-wrapper">
@@ -174,7 +175,7 @@
                     <div class="swiper-button-next dress-body scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
                     <!-- 配件 BG -->
                     <div class="swiper dress-bg radius-40pct">
                         <div class="swiper-wrapper">
@@ -199,22 +200,22 @@
                     <div class="main-body-box mx-5 px-5 scale-md-1x5 scale-lg-2x0 text-center">
 
                         <!-- 主體 placeholder -->
-<!--                        <div class="main-body" style="z-index: 0">-->
-<!--                            <div class="swiper dress-head">-->
-<!--                                <div class="swiper-wrapper">-->
-<!--                                    <div class="swiper-slide"><img src="assets/layers/BG/BG1.png" class="img-fluid rounded-circle"/></div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                       <div class="main-body" style="z-index: 0">
+                           <div class="swiper">
+                               <div class="swiper-wrapper">
+                                   <div class="swiper-slide"><img src="assets/layers/BG/BG1.png" class="img-fluid rounded-circle border border-5 border-brand"/></div>
+                               </div>
+                           </div>
+                       </div>
                         <!-- 主體 HEAD -->
                         <div class="main-body" style="z-index: 5">
                             <div class="swiper dress-head">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD2.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD3.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD4.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD9.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD10.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD2.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD3.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD4.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD9.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD10.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -222,11 +223,11 @@
                         <div class="main-body" style="z-index: 2">
                             <div class="swiper dress-body">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY2.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY4.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY8.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY9.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY10.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY2.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY4.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY8.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY9.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BODY/BODY10.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -234,11 +235,11 @@
                         <div class="main-body" style="z-index: 1">
                             <div class="swiper dress-bg">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/BG/BG1.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BG/BG2.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BG/BG3.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BG/BG4.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/BG/BG5.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG1.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG2.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG3.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG4.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/BG/BG5.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -246,9 +247,9 @@
                         <div class="main-body" style="z-index: 4">
                             <div class="swiper dress-eyes">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES2.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES3.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES4.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES2.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES3.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES4.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -256,11 +257,11 @@
                         <div class="main-body" style="z-index: 6">
                             <div class="swiper dress-mouth">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH2.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH4.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH8.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH9.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH10.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH2.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH4.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH8.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH9.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH10.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -268,11 +269,11 @@
                         <div class="main-body" style="z-index: 3">
                             <div class="swiper dress-clothes">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES1.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES2.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES3.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES4.png" class="img-fluid rounded-circle"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES5.png" class="img-fluid rounded-circle"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES1.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES2.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES3.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES4.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES5.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -282,10 +283,10 @@
             </div>
         </div>
 
-        <div class="col-12 col-lg-3">
+        <div class="col-12 col-lg-3 pt-3 pt-lg-0">
             <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-up-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-up-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
                     <!-- 配件 EYES -->
                     <div class="swiper dress-eyes radius-40pct">
                         <div class="swiper-wrapper">
@@ -298,7 +299,7 @@
                     <div class="swiper-button-next dress-eyes scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0 bg-accessory-linear radius-40pct border border-3 border-dark">
                     <!-- 配件 MOUTH -->
                     <div class="swiper dress-mouth radius-40pct">
                         <div class="swiper-wrapper">
@@ -313,7 +314,7 @@
                     <div class="swiper-button-next dress-mouth scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
                     <!-- 配件 CLOTHES -->
                     <div class="swiper dress-clothes radius-40pct">
                         <div class="swiper-wrapper">
@@ -364,7 +365,7 @@
 
 <div class="container-fluid bg-cap-lighter py-5">
     <div class="d-flex justify-content-center my-4">
-        <div class="btn btn-primary btn-xxl bg-brand-linear border-white border-3">
+        <div class="btn btn-primary btn-xxl hover-linear-color bg-brand-linear border-white border-3">
             <a href="#" class="text-white text-decoration-none" target="_blank">加入DISCORD</a>
         </div>
     </div>
@@ -486,7 +487,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-center py-5">
-        <div class="btn btn-primary btn-xxl bg-brand-linear border-white border-3">
+        <div class="btn btn-primary btn-xxl hover-linear-color bg-brand-linear border-white border-3">
             <a href="#" class="text-white text-decoration-none" target="_blank">聯絡WANA</a>
         </div>
     </div>
