dress block align baseline

--- a/v2/index.html
+++ b/v2/index.html
@@ -141,7 +141,7 @@
 </div>
 
 <div class="container position-relative pt-6 pb-7 py-sm-5 my-5">
-    <div class="row justify-content-center py-5 mv-up-0x375 mv-up-lg-0">
+    <div class="row justify-content-center py-5 mv-up-0x375 mv-up-lg-0 align-items-baseline">
         <div class="col-12 col-lg-3">
             <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
 
@@ -238,7 +238,7 @@
                 <div class="col-10">
 
                     <!-- 主體 -->
-                    <div class="main-body-box mx-5 px-5 py-4 py-md-0 ext-center">
+                    <div class="main-body-box mx-5 px-5 py-4 py-md-0 text-center">
 
                         <!-- 主體 placeholder -->
                        <div class="main-body" style="z-index: 0">
