--- a/v1/index.html
+++ b/v1/index.html
@@ -109,7 +109,7 @@
 <!-- TODO: 手機版 & 補上文字 -->
 <!-- TODO: 手機版沒有hover，希望拉到可視範圍再跑圖 -->
 <div class="container text-start">
-    <div class="row mb-5">
+    <div class="row mb-5 align-items-center">
         <div class="col-12 col-lg-5">
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_1.png')"></div>
         </div>
@@ -120,7 +120,7 @@
         </div>
     </div>
 
-    <div class="row mb-5">
+    <div class="row mb-5 align-items-center">
         <div class="col-12 col-lg-5 order-first order-lg-last">
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_2.png')"></div>
         </div>
@@ -131,7 +131,7 @@
         </div>
     </div>
 
-    <div class="row mb-5">
+    <div class="row mb-5 align-items-center">
         <div class="col-12 col-lg-5">
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_3.png')"></div>
         </div>
@@ -142,7 +142,7 @@
         </div>
     </div>
 
-    <div class="row mb-5">
+    <div class="row mb-5 align-items-center">
         <div class="col-12 col-lg-5 order-first order-lg-last">
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_4.png')"></div>
         </div>
