--- a/v2/index.html
+++ b/v2/index.html
@@ -145,9 +145,9 @@
         <div class="col-12 col-lg-3">
             <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-up-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-up-lg-0x5 bg-accessory-linear radius-0x40 border border-3 border-dark">
                     <!-- 配件 HEAD -->
-                    <div class="swiper dress-head radius-40pct">
+                    <div class="swiper dress-head radius-0x40">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD1.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/HEAD/HEAD2.png" class="img-fluid"/></div>
@@ -181,9 +181,9 @@
                     <div class="swiper-button-next dress-head scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0 bg-accessory-linear radius-0x40 border border-3 border-dark">
                     <!-- 配件 BODY -->
-                    <div class="swiper dress-body radius-40pct">
+                    <div class="swiper dress-body radius-0x40">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="assets/layers/BODY/BODY1.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/BODY/BODY2.png" class="img-fluid"/></div>
@@ -207,9 +207,9 @@
                     <div class="swiper-button-next dress-body scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0x5 bg-accessory-linear radius-0x40 border border-3 border-dark">
                     <!-- 配件 BG -->
-                    <div class="swiper dress-bg radius-40pct">
+                    <div class="swiper dress-bg radius-0x40">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="assets/layers/BG/BG1.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/BG/BG2.png" class="img-fluid"/></div>
@@ -390,9 +390,9 @@
         <div class="col-12 col-lg-3 pt-3 pt-lg-0">
             <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-up-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-up-lg-0x5 bg-accessory-linear radius-0x40 border border-3 border-dark">
                     <!-- 配件 EYES -->
-                    <div class="swiper dress-eyes radius-40pct">
+                    <div class="swiper dress-eyes radius-0x40">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="assets/layers/EYES/EYES1.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/EYES/EYES2.png" class="img-fluid"/></div>
@@ -406,9 +406,9 @@
                     <div class="swiper-button-next dress-eyes scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0 bg-accessory-linear radius-0x40 border border-3 border-dark">
                     <!-- 配件 MOUTH -->
-                    <div class="swiper dress-mouth radius-40pct">
+                    <div class="swiper dress-mouth radius-0x40">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH1.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH2.png" class="img-fluid"/></div>
@@ -426,9 +426,9 @@
                     <div class="swiper-button-next dress-mouth scale-1x5 scale-md-2x0 scale-xl-2x5 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-black">></div>
                 </div>
 
-                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0x5 bg-accessory-linear radius-40pct border border-3 border-dark">
+                <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-1x75 mv-down-sm-2x0 mv-down-lg-0x5 bg-accessory-linear radius-0x40 border border-3 border-dark">
                     <!-- 配件 CLOTHES -->
-                    <div class="swiper dress-clothes radius-40pct">
+                    <div class="swiper dress-clothes radius-0x40">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES1.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES2.png" class="img-fluid"/></div>
