dress page update

--- a/v2/dress.html
+++ b/v2/dress.html
@@ -21,18 +21,23 @@
     <script src="../lib/swiper/swiper-bundle.js"></script>
     <script src="../lib/jquery.js"></script>
     <script src="../lib/aos/aos.js"></script>
+    <style>
+        * {
+            user-select: none;
+        }
+    </style>
 </head>
-<body class="v2-theme bg-base full-layout">
+<body class="v2-theme bg-brand-linear full-layout">
 
 <div class="container">
     <div class="row">
         <div class="col-12 text-center mt-4">
-            <h1 class="banner-text-h1 effect-text-light fw-bold">\ 搭配出你的 WAVATAR /</h1>
+            <h1 class="banner-text-h1 effect-text-light fw-bold" style="white-space: nowrap">\ 搭配出你的 WAVATAR /</h1>
         </div>
     </div>
 </div>
 
-<div class="container position-relative py-sm-5 my-5 my-sm-3 scale-0x7 scale-lg-0x7">
+<div class="container position-relative py-sm-5 my-6 my-sm-3 scale-0x8 scale-lg-0x7">
     <div class="row justify-content-center  mv-up-0x375 mv-up-lg-0 align-items-baseline">
         <div class="col-12 col-lg-3">
             <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
@@ -125,7 +130,7 @@
 
             </div>
         </div>
-        <div class="col-12 col-sm-9 col-lg-6 order-first order-lg-0" style="z-index: -1">
+        <div class="col-12 col-lg-6 order-first order-lg-0" style="z-index: -1">
             <div class="d-flex justify-content-center">
                 <div class="col-10">
 
@@ -363,7 +368,13 @@
     </div>
 </div>
 
-
+<div class="container-fluid py-5">
+    <div class="d-flex justify-content-center my-4">
+        <div class="btn btn-lg btn-primary btn-xxl hover-linear-color bg-brand-linear border-white border-3">
+            <a href="#" class="text-white text-decoration-none" target="_blank">活動詳情</a>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
