smaller header text

--- a/v2/dress.html
+++ b/v2/dress.html
@@ -32,7 +32,8 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center mt-4">
-            <h1 class="banner-text-h1 effect-text-light fw-bold" style="white-space: nowrap">\ 搭配出你的 WAVATAR /</h1>
+            <h1 class="d-none d-sm-block banner-text-h1 effect-text-light fw-bold" style="white-space: nowrap">\ 搭配出你的 WAVATAR /</h1>
+            <h1 class="d-block d-sm-none banner-text-h2 effect-text-light fw-bold" style="white-space: nowrap">\ 搭配出你的 WAVATAR /</h1>
         </div>
     </div>
 </div>
